# Website-scrapper

./: CMakeLists.txt  Scrapen.cpp  build.bat
